Small Styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,15 +45,15 @@
               <div class="col-8 d-flex justify-content-start">
                 Property Income
               </div>
-              <div class="col-4 d-flex justify-content-end" [ngStyle]="{'color': setColor(Selected.actualMaintenance)}">
-                {{returnedNumber(Selected.actualMaintenance)}}
+              <div class="col-4 d-flex justify-content-end" [ngStyle]="{'color': setColor(Selected.propertyIncome)}">
+                {{returnedNumber(Selected.propertyIncome)}}
               </div>
             </div>
             <div class="row">
               <div class="col-8 d-flex justify-content-start">
                 Recoveries (excl W&E&S)
               </div>
-              <div class="col-4 d-flex justify-content-end" [ngStyle]="{'color': setColor(Selected.actualMaintenance)}">
+              <div class="col-4 d-flex justify-content-end" [ngStyle]="{'color': setColor(Selected.recoverisExclWES)}">
                 {{returnedNumber(Selected.recoverisExclWES)}}
               </div>
             </div>
